[metadata]
name = PetroEng
version = 0.0.1
author = William Long
author_email = WilliamRLong@gmail.com
description = Functions for Petroleum Engineering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WR-Long/PetroEng
project_urls =
    Bug Tracker = https://github.com/WR-Long/PetroEng/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = PetroEng
python_requires = >=3.6